--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/query-async-storage-persister": "^5.36.0",
     "@tanstack/react-query": "^5.36.0",
     "@tanstack/react-query-persist-client": "^5.36.0",
@@ -23,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.2",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
@@ -33,6 +35,7 @@
     "@types/react": "^18.2.54",
     "@types/react-dom": "^18.2.18",
     "@types/react-highlight-words": "^0.16.7",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
